--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 on: [push]
 jobs:
   hello_world_job:
-    rons-on: ubuntu-latest
+    runs-on: ubuntu-latest
     name: Job to test Actions
     steps:
       - name: hello world
