--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,3 +6,8 @@ jobs:
     steps:
       - name: hello world
         run: echo "Hello world Actions!"
+  container_job:
+    runs-on: ubuntu-latest
+    container: debian:buster-slim
+    steps:
+      - run: echo "Inside docker."
