--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,10 @@ jobs:
       - name: hello world
         run: echo "Hello world Actions!"
       - run: pwd
+      - run: ls -l
+      - name: Download codes
+        uses: actions/checkout@v2
+      - run: cd ${{ github.workspace }} && pwd && ls -l
   container_job:
     runs-on: ubuntu-latest
     container: debian:buster-slim
