--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: QQ1
-          path: ${QQ}/*
+          path: $QQ/*
   container_job:
     runs-on: ubuntu-latest
     container: debian:buster-slim
