--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,11 +9,22 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build and push
+      - name: Build deps
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
           tags: ghcr.io/darelbeida/test_debian10_gnu:latest
+          target: first_stage
+          cache-from: type=registry,ref=ghcr.io/darelbeida/test_debian10_gnu:latest
+          cache-to: type=inline
+
+      - name: Build runtime
+        id: docker_build_runtime
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ghcr.io/darelbeida/test_debian10_gnu_runtime:latest
+          target: second_stage
           cache-from: type=registry,ref=ghcr.io/darelbeida/test_debian10_gnu:latest
           cache-to: type=inline
