--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -2,6 +2,11 @@ on: [pull_request]
 jobs:
   build_dockerfile:
     runs-on: ubuntu-latest
+    services:
+      registry:
+        image: registry:2
+        ports:
+          - 5000:5000
     steps:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
@@ -13,7 +18,17 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          load: true
-          tags: test_debian10_gnu:latest
+          target: first_stage
+          push: true
+          tags: localhost:5000/darelbeida/test_debian10_gnu:latest
           cache-from: type=registry,ref=ghcr.io/darelbeida/test_debian10_gnu:latest
-          cache-to: type=inline
+          cache-to: type=register,ref=localhost:5000/darelbeida/test_debian10_gnu:latest
+      - name: Build and push 2
+        id: docker_build_2
+        uses: docker/build-push-action@v2
+        with:
+          target: second_stage
+          push: true
+          tags: localhost:5000/darelbeida/test_debian10_gnu_runtime:latest
+          cache-from: type=registry,ref=ghcr.io/darelbeida/test_debian10_gnu:latest
+          cache-to: type=register,ref=localhost:5000/darelbeida/test_debian10_gnu_runtime:latest
