--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -2,11 +2,6 @@ on: [pull_request]
 jobs:
   build_dockerfile:
     runs-on: ubuntu-latest
-    services:
-      registry:
-        image: registry:2
-        ports:
-          - 5000:5000
     steps:
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
@@ -19,8 +14,8 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           target: first_stage
-          push: true
-          tags: localhost:5000/darelbeida/test_debian10_gnu:latest
+          load: true
+          tags: darelbeida/test_debian10_gnu:latest
           cache-from: type=registry,ref=ghcr.io/darelbeida/test_debian10_gnu:latest
           cache-to: type=inline
       - name: Build and push 2
@@ -28,7 +23,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           target: second_stage
-          push: true
-          tags: localhost:5000/darelbeida/test_debian10_gnu_runtime:latest
-          cache-from: type=registry,ref=ghcr.io/darelbeida/test_debian10_gnu:latest
+          load: true
+          tags: darelbeida/test_debian10_gnu_runtime:latest
+          cache-from: type=registry,ref=darelbeida/test_debian10_gnu:latest
           cache-to: type=inline
