--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.OWNER }}
+          password: ${{ secrets.PAT }}
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Build deps
@@ -16,9 +16,9 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/darelbeida/test_debian10_gnu:latest
+          tags: ghcr.io/darelbeida-org/test_debian10_gnu:latest
           target: first_stage
-          cache-from: type=registry,ref=ghcr.io/darelbeida/test_debian10_gnu:latest
+          cache-from: type=registry,ref=ghcr.io/darelbeida-org/test_debian10_gnu:latest
           cache-to: type=inline
 
       - name: Build runtime
@@ -26,7 +26,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/darelbeida/test_debian10_gnu_runtime:latest
+          tags: ghcr.io/darelbeida-org/test_debian10_gnu_runtime:latest
           target: second_stage
-          cache-from: type=registry,ref=ghcr.io/darelbeida/test_debian10_gnu:latest
+          cache-from: type=registry,ref=ghcr.io/darelbeida-org/test_debian10_gnu:latest
           cache-to: type=inline
